--- a/src/gtk-3.0/widgets/_switch.scss
+++ b/src/gtk-3.0/widgets/_switch.scss
@@ -1,7 +1,8 @@
 switch {
 	padding: 2px;
 	@include border(fixed);
-	color: $control_bg;
+	color: $control_fg;
+    background-color: darken($control_bg,5%);
     &:checked {
         background-color: $selected_bg;
         color: $selected_bg;
