--- a/src/gtk-3.0/_theme.scss
+++ b/src/gtk-3.0/_theme.scss
@@ -22,6 +22,7 @@
 @import 'widgets/entry_combobox';
 @import 'widgets/expander';
 @import 'widgets/headerbar';
+@import 'widgets/list';
 @import 'widgets/menus';
 @import 'widgets/notebook';
 @import 'widgets/popover';
