--- a/src/gtk-3.0/widgets/_entry_combobox.scss
+++ b/src/gtk-3.0/widgets/_entry_combobox.scss
@@ -1,64 +1,65 @@
 entry {
-	@include border(textbox);
-	padding: 4px 3px;
-	background-color: $document_bg;
-	color: $document_fg;
-	&:selected,
-	&:selected:focus,
-	selection,
-	selection:focus {
-		@extend %selected_items;
-	}
+    @include border(textbox);
+    padding: 4px 3px;
+    background-color: $document_bg;
+    color: $document_fg;
+    &:selected,
+    &:selected:focus,
+    selection,
+    selection:focus {
+        @extend %selected_items;
+    }
 }
 
 
 combobox {
-	padding: 0px;
-	@include border(textbox);
-	entry {
-		margin-left: 2px;
-		margin-top: 2px;
-		margin-bottom: 2px;
-		box-shadow: none;
-		&:disabled {
-			box-shadow: none;
-		}
-	}
+    padding: 0px;
+    @include border(textbox);
+    entry.combo {
+        margin-left: 2px;
+        margin-top: 2px;
+        margin-bottom: 2px;
+        box-shadow: none;
+        &:disabled {
+            box-shadow: none;
+        }
+    }
 
-	button {
-		padding: 4px;
-		@include combobox_button(normal);
-		&:active,
-		&:checked {
-			@include combobox_button(pressed);
-		}
-		&:focus {
-			@include button_3d(default);
-		}
-	}
+    button.combo {
+        padding-top: 2px;
+        padding-bottom: 2px;
+        @include combobox_button(normal);
+        &:active,
+        &:checked {
+            @include combobox_button(pressed);
+        }
+        &:focus {
+            @include button_3d(default);
+        }
+    }
 
-	/*button-style combobox fix*/
-	button:not(:first-child) {
-		padding: 4px;
-		margin-left: 0px;
-		margin-bottom: 2px;
-		margin-top: 2px;
-		margin-right: 2px;
-	}
+    /*button-style combobox fix*/
+    button:not(:first-child) {
+        padding: 2px;
+        margin-left: 0px;
+        margin-bottom: 2px;
+        margin-top: 2px;
+        margin-right: 2px;
+    }
 }
 arrow,
 combobox arrow {
 
-	-gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
-	min-height: 16px;
-	min-width: 16px;
+    -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
+    min-height: 16px;
+    min-width: 16px;
 
-	&.horizontal {
-		-gtk-icon-source: -gtk-icontheme("pan-right-symbolic");
-		min-height: 16px;
-		min-width: 16px;
-	}
+    &.horizontal {
+        -gtk-icon-source: -gtk-icontheme("pan-right-symbolic");
+        min-height: 16px;
+        min-width: 16px;
+    }
 }
 button.combo:not(:only-child) {
-	padding: 4px 3px;
+    padding: 4px 3px;
 }
