--- a/src/gtk-3.0/widgets/_list.scss
+++ b/src/gtk-3.0/widgets/_list.scss
@@ -1,6 +1,6 @@
 list {
-    background-color: $INFOBK;
-    color: $INFOTEXT;
+    background-color: $WINDOW;
+    color: $WINDOWTEXT;
 
     row {
         @include button_flat(normal);
@@ -11,18 +11,18 @@ list {
             padding-bottom:2px;
         }
         &.activatable:focus {
-            background-color: lighten($INFOBK,3%);
+            background-color: lighten($WINDOW,3%);
             @include button_flat(default);
         }
 
         &.activatable:hover {
 
-            background-color: lighten($INFOBK,5%);
+            background-color: lighten($WINDOW,5%);
             @include button_flat(hover);
         }
 
         &.activatable:active {
-            background-color: darken($INFOBK,5%);
+            background-color: darken($WINDOW,5%);
             @include button_flat(pressed);
         }
 
