--- a/src/gtk-3.0/widgets/_switch.scss
+++ b/src/gtk-3.0/widgets/_switch.scss
@@ -16,17 +16,11 @@ switch {
         }
     }
     slider {
-        min-width: 18px;
-        min-height: 18px;
-        border-width: 1px;
-        border-radius: 0px;
-        border-style: solid;
-        border-color: $BTNTEXT;
-        border-top-color: #f1f1f1;
-        border-left-color: #f1f1f1;
+        min-width: 16px;
+        min-height: 16px;
+        border: none;
         background-color: $C3DFACE;
         color: $BTNTEXT;
-        box-shadow: inset -1px 0 shade($C3DFACE, 0.65), inset 0 -1px shade($C3DFACE, 0.65), inset 1px 0 #f1f1f1,
-            inset 0 1px #f1f1f1;
+        box-shadow: $button_border_normal;
     }
 }
