--- a/src/gtk-3.0/widgets/_view.scss
+++ b/src/gtk-3.0/widgets/_view.scss
@@ -42,3 +42,9 @@ treeview>header>button{
   }
 }
 
+.rubberband,
+rubberband {
+  border: 1px dotted $GRAYTEXT;
+  background-color: transparentize($HIGHLIGHT, 1);
+}
+
