--- a/src/gtk-3.0/widgets/_view.scss
+++ b/src/gtk-3.0/widgets/_view.scss
@@ -48,3 +48,10 @@ rubberband {
   background-color: transparentize($HIGHLIGHT, 1);
 }
 
+// For some reason nemo doesn't respect the 'dotted' border style
+// so we'll just use the "modern" translucent background style
+.nemo-window .rubberband,
+.nemo-window rubberband {
+  border: 1px solid darken($HIGHLIGHT, 0.1);
+  background-color: transparentize($HIGHLIGHT, 0.8);
+}
